тесты компилируются, хотя и не полностью работают